--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,9 +1,9 @@
 /* Footer.css */
 
 footer {
-  background: #F7971E;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #f76e1e;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f76e1e, #f7491e);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f76e1e, #f7491e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #fff;
   text-align: center;
 }
@@ -24,7 +24,7 @@ footer {
 }
 
 .footer-copyright {
-  background: #e0871b41;
+  background: #75220d41;
   padding: 5px 0;
 }
 
@@ -36,6 +36,7 @@ footer {
 
 .footer-social-list {
   display: flex;
+  list-style: none;
 }
 
 .social-item a {
