--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,7 @@
 .header-container {
-  background: #F7971E;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #FFD200, #F7971E);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #FFD200, #F7971E); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #f76e1e;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f76e1e, #f7491e);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f76e1e, #f7491e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -12,6 +12,7 @@
   display: flex;
   align-items: center;
   margin-right: 5rem;
+  list-style: none;
 }
 
 .nav-item {
@@ -35,6 +36,7 @@
   background: -webkit-linear-gradient(to right, #f76e1e, #f7491e);  /* Chrome 10-25, Safari 5.1-6 */
   background: linear-gradient(to right, #f76e1e, #f7491e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   color: #fff;
+  border: #fff solid 1px;
 }
 
 .nav-item a {
