--- a/src/components/ProductList/ProductList.css
+++ b/src/components/ProductList/ProductList.css
@@ -1,55 +1,94 @@
-/* ProductList.css */
-
 .product-list-container {
-  max-width: 800px;
-  margin: 0 auto;
+  max-width: fit-content;
+  margin: 50px auto 50px auto;
   padding: 20px;
 }
 
-.product-item {
+.product-list-rows {
   display: flex;
-  margin-bottom: 20px;
-  padding: 10px;
+  justify-content: center;
+}
+
+.product-item {
+  max-width: 300px;
+  min-width: auto;
+  margin: 0 20px 20px 20px;
+  padding: 25px;
   background-color: #f9f9f9;
   border-radius: 5px;
+  color: #f76e1e;
+  text-decoration: none;
+  position: relative;
+  display: inline-block;
   transition: all 0.3s ease; /* Add transition for smoother effect */
 }
 
 .product-item:hover {
+  background: #f76e1e;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #f76e1e, #f7491e);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #f76e1e, #f7491e); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
   transform: scale(1.05); /* Scale the item on hover */
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); /* Add shadow on hover */
+  color: #fff;
 }
 
-.product-item img {
-  width: 100px;
-  height: 100px;
-  margin-right: 20px;
+.product-img {
+  max-width: 300px;
+  height: 400px;
+  object-fit: cover;
   border-radius: 5px;
 }
 
-.product-details {
-  flex: 1;
-}
-
-.product-details h3 {
-  margin-top: 0;
-  font-size: 18px;
-}
-
-.product-details p {
+.product-title {
+  text-align: center;
   margin-bottom: 0;
-  font-size: 14px;
 }
 
-ul {
-  list-style: none;
-  padding-left: 0;
+.cart-btn {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: 300px;
+  height: 400px;
+  background: #000000a9;
+  border-radius: 5px;
 }
 
-.product-desc {
-  overflow: hidden;
-  display: -webkit-box;
-  -webkit-line-clamp: 2; /* number of lines to show */
-          line-clamp: 2; 
-  -webkit-box-orient: vertical;
+.cart-btn p{
+  position: relative;
+  top: 43%;
+  left: 36%;
+  color: #fff;
+}
+
+
+.overlay-button {
+  position: absolute;
+  top: 25px;
+  left: 25px;
+  width: 300px;
+  height: 400px;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: none;
+  justify-content: center;
+  align-items: center;
+  border: none;
+  border-radius: 5px;
+  opacity: 0;
+  transition: 1s ease;
+}
+
+.button-text {
+  color: white;
+  font-size: 16px;
+  transition: transform 0.5s ease;
+}
+
+.product-item:hover .overlay-button {
+  opacity: 1;
+  display: flex;
+}
+
+.product-item:hover .button-text {
+  transform: translateY(-5px);
 }
