--- a/src/input.css
+++ b/src/input.css
@@ -4,12 +4,58 @@
 
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Twklausanne 600", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+#logo {
+  font-family: "Forte", sans-serif;
   font-optical-sizing: auto;
   font-weight: normal;
   font-style: normal;
-  font-variation-settings: "slnt" 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #e9e9e9;
+  font-size: 1.5rem;
+  display: inline-block;
+  padding: 10px;
+  transition: transform 0.3s ease;
+}
+
+#logo:hover {
+  transform: scale(1.1);
+}
+
+#logo:hover::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  border: 2px solid #fff;
+  border-radius: 9999px;
+  animation: outlineAnimation 0.5s infinite alternate;
+}
+
+@keyframes outlineAnimation {
+  0% {
+      transform: scale(1);
+      opacity: 0.7;
+  }
+  100% {
+      transform: scale(1.1);
+      opacity: 0;
+  }
+}
+
+@layer base {
+  :root {
+    /* For rgb(255 115 179 / <alpha-value>) */
+    --color-primary: 66 148 173;
+
+    /* For hsl(198deg 93% 60% / <alpha-value>) */
+    --color-primary: 194deg 45% 47%;
+
+    /* For rgba(255, 115, 179, <alpha-value>) */
+    --color-primary: 66, 148, 173;
+  }
 }
