--- a/src/output.css
+++ b/src/output.css
@@ -435,6 +435,15 @@ video {
   display: none;
 }
 
+:root {
+  /* For rgb(255 115 179 / <alpha-value>) */
+  --color-primary: 66 148 173;
+  /* For hsl(198deg 93% 60% / <alpha-value>) */
+  --color-primary: 194deg 45% 47%;
+  /* For rgba(255, 115, 179, <alpha-value>) */
+  --color-primary: 66, 148, 173;
+}
+
 *, ::before, ::after {
   --tw-border-spacing-x: 0;
   --tw-border-spacing-y: 0;
@@ -597,10 +606,6 @@ video {
   bottom: 1rem;
 }
 
-.bottom-56 {
-  bottom: 14rem;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -609,28 +614,28 @@ video {
   right: 0px;
 }
 
-.right-12 {
-  right: 3rem;
-}
-
 .right-16 {
   right: 4rem;
-}
-
-.top-10 {
-  top: 2.5rem;
 }
 
 .top-0 {
   top: 0px;
 }
 
+.top-10 {
+  top: 2.5rem;
+}
+
 .z-\[1000\] {
   z-index: 1000;
 }
 
-.z-10 {
-  z-index: 10;
+.z-\[9999\] {
+  z-index: 9999;
+}
+
+.m-5 {
+  margin: 1.25rem;
 }
 
 .mx-3 {
@@ -655,20 +660,32 @@ video {
   margin-top: 2.5rem;
 }
 
-.mt-52 {
-  margin-top: 13rem;
+.me-10 {
+  margin-inline-end: 2.5rem;
 }
 
-.mt-48 {
-  margin-top: 12rem;
+.me-12 {
+  margin-inline-end: 3rem;
 }
 
-.mt-36 {
-  margin-top: 9rem;
+.me-\[\] {
+  margin-inline-end: ;
 }
 
-.mt-\[88px\] {
-  margin-top: 88px;
+.me-\[56px\] {
+  margin-inline-end: 56px;
+}
+
+.me-\[54px\] {
+  margin-inline-end: 54px;
+}
+
+.me-\[53px\] {
+  margin-inline-end: 53px;
+}
+
+.me-\[52px\] {
+  margin-inline-end: 52px;
 }
 
 .flex {
@@ -687,40 +704,38 @@ video {
   height: 75%;
 }
 
-.h-\[500px\] {
-  height: 500px;
-}
-
 .h-\[100vh\] {
   height: 100vh;
 }
 
-.h-\[100vh-88px\] {
-  height: 100vh-88px;
+.h-\[500px\] {
+  height: 500px;
 }
 
-.h-\[calc\(\)\] {
-  height: calc();
+.h-screen {
+  height: 100vh;
 }
 
-.h-\[calc\(100vh-88px\)\] {
-  height: calc(100vh - 88px);
-}
-
-.w-24 {
-  width: 6rem;
+.h-fit {
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
 }
 
 .w-\[100\%\] {
   width: 100%;
 }
 
-.w-full {
-  width: 100%;
-}
-
 .w-\[100vw\] {
   width: 100vw;
+}
+
+.w-\[95vw\] {
+  width: 95vw;
+}
+
+.w-full {
+  width: 100%;
 }
 
 .transform {
@@ -779,6 +794,10 @@ video {
   gap: 1.25rem;
 }
 
+.gap-6 {
+  gap: 1.5rem;
+}
+
 .rounded {
   border-radius: 0.25rem;
 }
@@ -796,9 +815,17 @@ video {
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 
-.bg-purple-500 {
+.bg-gray-100 {
   --tw-bg-opacity: 1;
-  background-color: rgb(168 85 247 / var(--tw-bg-opacity));
+  background-color: rgb(243 244 246 / var(--tw-bg-opacity));
+}
+
+.bg-gray-200\/10 {
+  background-color: rgb(229 231 235 / 0.1);
+}
+
+.bg-transparent {
+  background-color: transparent;
 }
 
 .bg-white {
@@ -810,12 +837,16 @@ video {
   --tw-bg-opacity: 0;
 }
 
-.bg-gradient-to-br {
-  background-image: linear-gradient(to bottom right, var(--tw-gradient-stops));
+.bg-gradient-to-b {
+  background-image: linear-gradient(to bottom, var(--tw-gradient-stops));
 }
 
 .bg-gradient-to-r {
   background-image: linear-gradient(to right, var(--tw-gradient-stops));
+}
+
+.bg-gradient-to-tr {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
 }
 
 .from-indigo-500 {
@@ -830,9 +861,27 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
-.from-indigo-900\/50 {
-  --tw-gradient-from: rgb(49 46 129 / 0.5) var(--tw-gradient-from-position);
-  --tw-gradient-to: rgb(49 46 129 / 0) var(--tw-gradient-to-position);
+.from-primary {
+  --tw-gradient-from: rgba(var(--color-primary), 1) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgba(var(--color-primary), 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-primary\/30 {
+  --tw-gradient-from: rgba(var(--color-primary), 0.3) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgba(var(--color-primary), 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-primary\/80 {
+  --tw-gradient-from: rgba(var(--color-primary), 0.8) var(--tw-gradient-from-position);
+  --tw-gradient-to: rgba(var(--color-primary), 0) var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
+}
+
+.from-transparent {
+  --tw-gradient-from: transparent var(--tw-gradient-from-position);
+  --tw-gradient-to: rgb(0 0 0 / 0) var(--tw-gradient-to-position);
   --tw-gradient-stops: var(--tw-gradient-from), var(--tw-gradient-to);
 }
 
@@ -846,9 +895,25 @@ video {
   --tw-gradient-stops: var(--tw-gradient-from), #581c87 var(--tw-gradient-via-position), var(--tw-gradient-to);
 }
 
-.via-purple-900\/50 {
-  --tw-gradient-to: rgb(88 28 135 / 0)  var(--tw-gradient-to-position);
-  --tw-gradient-stops: var(--tw-gradient-from), rgb(88 28 135 / 0.5) var(--tw-gradient-via-position), var(--tw-gradient-to);
+.via-transparent {
+  --tw-gradient-to: rgb(0 0 0 / 0)  var(--tw-gradient-to-position);
+  --tw-gradient-stops: var(--tw-gradient-from), transparent var(--tw-gradient-via-position), var(--tw-gradient-to);
+}
+
+.to-cyan-200 {
+  --tw-gradient-to: #a5f3fc var(--tw-gradient-to-position);
+}
+
+.to-cyan-200\/30 {
+  --tw-gradient-to: rgb(165 243 252 / 0.3) var(--tw-gradient-to-position);
+}
+
+.to-cyan-200\/80 {
+  --tw-gradient-to: rgb(165 243 252 / 0.8) var(--tw-gradient-to-position);
+}
+
+.to-gray-100 {
+  --tw-gradient-to: #f3f4f6 var(--tw-gradient-to-position);
 }
 
 .to-pink-500 {
@@ -857,10 +922,6 @@ video {
 
 .to-pink-900 {
   --tw-gradient-to: #831843 var(--tw-gradient-to-position);
-}
-
-.to-pink-900\/50 {
-  --tw-gradient-to: rgb(131 24 67 / 0.5) var(--tw-gradient-to-position);
 }
 
 .object-cover {
@@ -889,6 +950,11 @@ video {
 .py-2 {
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+
+.py-3 {
+  padding-top: 0.75rem;
+  padding-bottom: 0.75rem;
 }
 
 .py-4 {
@@ -965,10 +1031,33 @@ video {
   --tw-text-opacity: 0;
 }
 
+.shadow {
+  --tw-shadow: 0 1px 3px 0 rgb(0 0 0 / 0.1), 0 1px 2px -1px rgb(0 0 0 / 0.1);
+  --tw-shadow-colored: 0 1px 3px 0 var(--tw-shadow-color), 0 1px 2px -1px var(--tw-shadow-color);
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
 .shadow-lg {
   --tw-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
   --tw-shadow-colored: 0 10px 15px -3px var(--tw-shadow-color), 0 4px 6px -4px var(--tw-shadow-color);
   box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+
+.outline {
+  outline-style: solid;
+}
+
+.outline-1 {
+  outline-width: 1px;
+}
+
+.outline-white {
+  outline-color: #fff;
+}
+
+.blur {
+  --tw-blur: blur(8px);
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
 }
 
 .drop-shadow-lg {
@@ -994,6 +1083,12 @@ video {
   transition-duration: 150ms;
 }
 
+.transition-colors {
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+}
+
 .duration-300 {
   transition-duration: 300ms;
 }
@@ -1004,14 +1099,48 @@ video {
 
 body {
   margin: 0;
-  font-family: "Inter", sans-serif;
+  font-family: "Twklausanne 600", sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
+#logo {
+  font-family: "Forte", sans-serif;
   font-optical-sizing: auto;
   font-weight: normal;
   font-style: normal;
-  font-variation-settings: "slnt" 0;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  background-color: #e9e9e9;
+  font-size: 1.5rem;
+  display: inline-block;
+  padding: 10px;
+  transition: transform 0.3s ease;
+}
+
+#logo:hover {
+  transform: scale(1.1);
+}
+
+#logo:hover::before {
+  content: '';
+  position: absolute;
+  top: -5px;
+  left: -5px;
+  right: -5px;
+  bottom: -5px;
+  border: 2px solid #fff;
+  border-radius: 9999px;
+  animation: outlineAnimation 0.5s infinite alternate;
+}
+
+@keyframes outlineAnimation {
+  0% {
+    transform: scale(1);
+    opacity: 0.7;
+  }
+
+  100% {
+    transform: scale(1.1);
+    opacity: 0;
+  }
 }
 
 .hover\:scale-105:hover {
@@ -1031,17 +1160,22 @@ body {
   background-color: rgb(229 231 235 / var(--tw-bg-opacity));
 }
 
-.hover\:bg-purple-600:hover {
+.hover\:bg-white:hover {
   --tw-bg-opacity: 1;
-  background-color: rgb(147 51 234 / var(--tw-bg-opacity));
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
 .hover\:bg-white\/30:hover {
   background-color: rgb(255 255 255 / 0.3);
 }
 
-.hover\:bg-gradient-to-r:hover {
-  background-image: linear-gradient(to right, var(--tw-gradient-stops));
+.hover\:bg-gradient-to-tr:hover {
+  background-image: linear-gradient(to top right, var(--tw-gradient-stops));
+}
+
+.hover\:text-primary:hover {
+  --tw-text-opacity: 1;
+  color: rgba(var(--color-primary), var(--tw-text-opacity));
 }
 
 .hover\:text-white:hover {
@@ -1080,7 +1214,13 @@ body {
 }
 
 @media (min-width: 1024px) {
-  .lg\:grid-cols-4 {
+  .lg\:grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
+}
+
+@media (min-width: 1280px) {
+  .xl\:grid-cols-4 {
     grid-template-columns: repeat(4, minmax(0, 1fr));
   }
 }
