--- a/src/output.css
+++ b/src/output.css
@@ -602,10 +602,6 @@ video {
   bottom: 1rem;
 }
 
-.bottom-44 {
-  bottom: 11rem;
-}
-
 .left-0 {
   left: 0px;
 }
@@ -620,6 +616,10 @@ video {
 
 .top-10 {
   top: 2.5rem;
+}
+
+.top-\[30rem\] {
+  top: 30rem;
 }
 
 .z-\[1000\] {
@@ -653,6 +653,11 @@ video {
   margin-bottom: 2.5rem;
 }
 
+.mx-2 {
+  margin-left: 0.5rem;
+  margin-right: 0.5rem;
+}
+
 .mb-3 {
   margin-bottom: 0.75rem;
 }
@@ -661,8 +666,48 @@ video {
   margin-top: 2.5rem;
 }
 
-.block {
-  display: block;
+.mt-16 {
+  margin-top: 4rem;
+}
+
+.mt-56 {
+  margin-top: 14rem;
+}
+
+.mt-64 {
+  margin-top: 16rem;
+}
+
+.mt-72 {
+  margin-top: 18rem;
+}
+
+.mt-auto {
+  margin-top: auto;
+}
+
+.mt-96 {
+  margin-top: 24rem;
+}
+
+.mt-48 {
+  margin-top: 12rem;
+}
+
+.mt-\[\] {
+  margin-top: ;
+}
+
+.mt-\[100rem\] {
+  margin-top: 100rem;
+}
+
+.mt-\[40rem\] {
+  margin-top: 40rem;
+}
+
+.mt-\[38rem\] {
+  margin-top: 38rem;
 }
 
 .flex {
@@ -697,6 +742,10 @@ video {
   height: 82vh;
 }
 
+.h-auto {
+  height: auto;
+}
+
 .h-full {
   height: 100%;
 }
@@ -705,12 +754,28 @@ video {
   height: 100vh;
 }
 
+.w-28 {
+  width: 7rem;
+}
+
+.w-40 {
+  width: 10rem;
+}
+
 .w-\[100\%\] {
   width: 100%;
 }
 
 .w-\[100vw\] {
   width: 100vw;
+}
+
+.w-\[16px\] {
+  width: 16px;
+}
+
+.w-\[60rem\] {
+  width: 60rem;
 }
 
 .w-\[95vw\] {
@@ -725,16 +790,8 @@ video {
   width: 15rem;
 }
 
-.w-20 {
-  width: 5rem;
-}
-
-.w-40 {
-  width: 10rem;
-}
-
-.w-\[16px\] {
-  width: 16px;
+.w-96 {
+  width: 24rem;
 }
 
 .transform {
@@ -777,20 +834,12 @@ video {
   flex-direction: column;
 }
 
-.items-start {
-  align-items: flex-start;
-}
-
 .items-end {
   align-items: flex-end;
 }
 
 .items-center {
   align-items: center;
-}
-
-.justify-start {
-  justify-content: flex-start;
 }
 
 .justify-end {
@@ -986,6 +1035,10 @@ video {
   text-align: center;
 }
 
+.text-justify {
+  text-align: justify;
+}
+
 .text-2xl {
   font-size: 1.5rem;
   line-height: 2rem;
@@ -997,10 +1050,6 @@ video {
 
 .text-\[3rem\] {
   font-size: 3rem;
-}
-
-.text-\[5rem\] {
-  font-size: 5rem;
 }
 
 .text-lg {
@@ -1023,6 +1072,11 @@ video {
   line-height: 1rem;
 }
 
+.text-3xl {
+  font-size: 1.875rem;
+  line-height: 2.25rem;
+}
+
 .font-bold {
   font-weight: 700;
 }
@@ -1040,21 +1094,6 @@ video {
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
 
-.text-white {
-  --tw-text-opacity: 1;
-  color: rgb(255 255 255 / var(--tw-text-opacity));
-}
-
-.text-gray-800 {
-  --tw-text-opacity: 1;
-  color: rgb(31 41 55 / var(--tw-text-opacity));
-}
-
-.text-gray-600 {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
-
 .text-gray-700 {
   --tw-text-opacity: 1;
   color: rgb(55 65 81 / var(--tw-text-opacity));
@@ -1063,6 +1102,16 @@ video {
 .text-primary {
   --tw-text-opacity: 1;
   color: rgba(var(--color-primary), var(--tw-text-opacity));
+}
+
+.text-white {
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-gray-600 {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 
 .text-opacity-0 {
@@ -1142,15 +1191,6 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 
-#logo {
-  font-family: "Forte", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: normal;
-  font-style: normal;
-  display: inline-block;
-  transition: transform 0.3s ease;
-}
-
 #heroLogo {
   font-family: "Forte", sans-serif;
   font-optical-sizing: auto;
@@ -1158,23 +1198,6 @@ body {
   font-style: normal;
   display: inline-block;
   transition: transform 0.3s ease;
-}
-
-#logo:hover {
-  transform: scale(1.1);
-}
-
-#logo:hover::before {
-  content: '';
-  position: absolute;
-  top: -5px;
-  left: -5px;
-  right: -5px;
-  bottom: -5px;
-  border: 2px solid #fff;
-  border-radius: 9999px;
-  animation: outlineAnimation 0.5s
-  infinite alternate;
 }
 
 .shadow-text {
@@ -1187,6 +1210,17 @@ body {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
   filter: drop-shadow(2px 2px 4px rgba(0, 0, 0, 0.5));
+}
+
+.fade-container {
+  opacity: 0;
+  transform: translateY(20px);
+  transition: opacity 0.5s ease, transform 0.5s ease;
+}
+
+.fade-visible {
+  opacity: 1;
+  transform: translateY(0);
 }
 
 @keyframes outlineAnimation {
@@ -1288,6 +1322,15 @@ body {
     right: auto;
   }
 
+  .lg\:mx-auto {
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .lg\:mt-48 {
+    margin-top: 12rem;
+  }
+
   .lg\:flex {
     display: flex;
   }
@@ -1309,8 +1352,8 @@ body {
     text-align: start;
   }
 
-  .lg\:text-\[10rem\] {
-    font-size: 10rem;
+  .lg\:text-\[3rem\] {
+    font-size: 3rem;
   }
 }
 
